# darwen

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: difference.rs  divide.rs  intersect.rs  join.rs  product.rs  project.rs  rename.rs  restrict.rs  union.rs
benches/common/: mod.rs
examples/: difference.rs  divide.rs  intersect.rs  join.rs  predicate.rs  product.rs  project.rs  rename.rs  restrict.rs  union.rs
src/: error.rs  lib.rs
src/ops/: difference.rs  divide.rs  intersect.rs  join.rs  mod.rs  product.rs  project.rs  rename.rs  restrict.rs  union.rs
src/types/: heading.rs  mod.rs  predicate.rs  relation.rs  scalar.rs  tuple.rs
tests/: ideal_behavior.rs
