[package]
name = "darwen"
description = "A relational algebra library for Rust"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lints.rust]
unused = { level = "warn", priority = -1 }
unused_imports = "warn"
dead_code = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
