[package]
name = "darwen"
description = "A relational algebra library for Rust"
version = "1.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ya7on/darwen"
categories = ["database", "database-implementations"]
keywords = ["relational", "algebra", "database"]
authors = ["S. Suprun <hello@syoma.website>"]

[lints.rust]
unused = { level = "warn", priority = -1 }
unused_imports = "warn"
dead_code = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "join"
harness = false

[[bench]]
name = "restrict"
harness = false

[[bench]]
name = "project"
harness = false

[[bench]]
name = "rename"
harness = false

[[bench]]
name = "union"
harness = false

[[bench]]
name = "difference"
harness = false

[[bench]]
name = "product"
harness = false

[[bench]]
name = "intersect"
harness = false

[[bench]]
name = "divide"
harness = false
